# hass-light-sync

./: .gitignore  Cargo.toml  README.md  settings.example.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src/: api.rs  capture.rs  main.rs  models.rs  settings.rs
