[package]
name = "hass-light-sync"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"  
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.14"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.5"