[package]
name = "hass-light-sync"
version = "0.2.0"
edition = "2021"
description = "Synchronizes your display's average color to a light in Home Assistant, inspired by Philips Hue Sync and Ambilight."
repository = "https://github.com/mjarlund/hass-light-sync"
license = "MIT"

[dependencies]
captrs = "0.3.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.14"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.5"
